fix large gap of columns in collage format

--- a/client/templates/yourPics/yourPics.css
+++ b/client/templates/yourPics/yourPics.css
@@ -1,15 +1,19 @@
-#yourImages{
-	margin-left: auto;
-	margin-right: auto;
-  -webkit-column-count: 5;
-  -webkit-column-gap:   0px;
-  -moz-column-count:    5;
-  -moz-column-gap:      0px;
-  column-count:         5;
-  column-gap:           0px;  
-}
+#yourImages{ margin: 0; padding: 0; }
 
-#yourImages img{
+#yourImages {
+   /* Prevent vertical gaps */
+   line-height: 0;
+
+   -webkit-column-count: 5;
+   -webkit-column-gap:   0px;
+   -moz-column-count:    5;
+   -moz-column-gap:      0px;
+   column-count:         5;
+   column-gap:           0px;
+
+}
+#yourImages img {
+  /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
 }
@@ -19,6 +23,7 @@
   -moz-column-count:    4;
   -webkit-column-count: 4;
   column-count:         4;
+  margin-bottom: -1000px;
   }
 }
 @media (max-width: 1000px) {
@@ -35,7 +40,7 @@
   column-count:         2;
   }
 }
-@media (max-width: 360px) {
+@media (max-width: 400px) {
   #yourImages {
   -moz-column-count:    1;
   -webkit-column-count: 1;
